docs(lab-01): add test data and enhance exercise documentation
Documentation Updates:
- Add Exercise 5 document for read_file challenge
- Update Exercise 2 with specific test queries using test data
- Update Exercise 4 with correct file paths (tests/unit/)
- Add test data documentation section to setup guide
- Update lab checklist with Exercise 5 link

Test Data (New):
- Add data/todos.txt, data/notes.txt, data/sample.py
- Add data/README.md explaining test files purpose
- Update .gitignore to include data/ directory

Key Improvements:
- Students no longer need to manually create test data
- All file paths corrected to match actual structure
- Comprehensive challenge exercise with error handling guide
- Clear separation: test data (committed) vs implementations (gitignored)

--- a/.gitignore
+++ b/.gitignore
@@ -69,10 +69,11 @@ tests/unit/test_file_search.py
 tests/unit/test_read_file.py
 tests/integration/
 
-# Keep framework files
+# Keep framework and test data files
 !tests/test_framework.py
 !tests/conftest.py
 !src/agent/tools/__init__.py
+!data/
 
 # Logs
 *.log
