feat: add IDE-specific configuration files for multi-IDE support
Configuration Files:
- .vscode/settings.json: VS Code settings for Continue, Copilot, and Python
- .vscode/extensions.json: Recommended extensions list
- IDE_CONFIGURATION.md: Comprehensive guide for all supported IDEs

Features:
- Continue: Auto-reads .cursorrules (same as Cursor)
- Copilot: Manual setup instructions with workarounds
- Python: Testing, linting, and formatting configuration
- File exclusions: Reduce AI context noise

Documentation:
- Detailed setup for each IDE (Cursor/Continue/Copilot/Manual)
- Troubleshooting section for common issues
- Best practices for IDE configuration
- Configuration file comparison table

Updated:
- .gitignore: Allow .vscode project config while ignoring personal settings
- setup-guide.md: Reference new IDE configuration guide

Students can now use project-wide AI configuration regardless of their IDE choice.

--- a/.gitignore
+++ b/.gitignore
@@ -34,13 +34,18 @@ venv.bak/
 htmlcov/
 .tox/
 
-# IDEs
-.vscode/
+# IDEs (keep .vscode/ for project config, but ignore personal settings)
 .idea/
 *.swp
 *.swo
 *~
 .DS_Store
+
+# Keep .vscode project configuration but ignore personal settings
+!.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
 
 # Cursor
 .cursor/
