--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     // AI Coding Assistants (choose one or more)
     "continue.continue",
+    "saoudrizwan.claude-dev",
     "github.copilot",
     "github.copilot-chat",
     
