docs(lesson-2): implement immediate fixes from documentation review
- Fix Windows compatibility in shared_state.py (cross-platform file locking)
- Add cost analysis section with ROI examples and trade-off visualization
- Add 5 high-priority Mermaid diagrams:
  * Cost/quality trade-off matrix
  * Tool assignment matrix
  * State lifecycle diagram
  * Debugging decision tree
  * Message flow with timing
- Mark Page 9 (Hierarchical vs P2P) as advanced preview/optional
- Add TUTORIAL-2-SCOPE.md to .gitignore

These changes address critical gaps identified in documentation review:
- Windows users can now run without fcntl errors
- Students have visual aids for complex concepts
- Cost considerations help production decisions
- Advanced content won't overwhelm beginners

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ htmlcov/
 .cursor/
 *.plan.md
 
+# Project Planning Documents (work in progress)
+TUTORIAL-2-SCOPE.md
+
 # Environment
 .env
 .env.local
