feat: add 2025 version checks to setup script
- Add Python 3.11+ version validation (exits if not met)
- Add Node 20 LTS version check (warning if older)
- Add Ollama 0.4.0+ version check (warning with upgrade instructions)
- Update requirements.txt files with 2025 version requirements
- Create root-level requirements.txt for convenience
- Update multi_agent requirements to specify Python 3.11+ and Ollama 0.4.0+
- Setup script now checks for root requirements.txt first (backwards compatible)

Version checks align with docs/tech-stack.md 2025 standards.

Files modified:
- setup.sh: Added version checking functions
- requirements.txt: NEW - root-level convenience file
- src/agent/requirements.txt: Added version requirement comments
- src/multi_agent/requirements.txt: Updated to Python 3.11+ and Ollama 0.4.0+

--- a/src/multi_agent/requirements.txt
+++ b/src/multi_agent/requirements.txt
@@ -4,10 +4,11 @@
 # No additional packages required!
 #
 # Core dependencies (already installed from Tutorial 1):
-# - Python 3.10+
-# - Ollama (local LLM)
+# - Python 3.11+ (2025 requirement)
+# - Ollama 0.4.0+ (local LLM with context caching)
 # - pytest (testing)
 # - requests (HTTP client)
+# - pydantic (data validation)
 #
 # All dependencies should already be installed if you completed Tutorial 1.
 # If not, see: ../agent/requirements.txt
