fix: revert to Llama 3.1 (3.3:8b does not exist in Ollama)
CRITICAL FIX: Llama 3.3:8b model does not exist in Ollama.
Previous commits incorrectly documented a non-existent model.

Research findings:
- llama3.3:8b does NOT exist
- llama3.3:70b exists but is 42GB (too large for tutorials)
- llama3.1:8b is proven, stable, community standard
- User already has llama3.1:8b installed (4.9GB)

Changes:
- Revert all model references from llama3.3:8b to llama3.1:8b
- Update messaging: Llama 3.1 is 'proven & stable' vs 'latest'
- Add context note about newer versions (3.2, 3.3, 4) and why 3.1 is best
- Maintain 2025 standards (GPT-4o, Claude 3.5, Gemini 2.0 as alternatives)

Files updated (22 total):
- Configuration: agent_config.py, setup.sh, debug_agent.py
- Core docs: tech-stack.md, llm-fundamentals.md, tool-calling-architecture.md
- Tutorial 1 docs: READING_GUIDE, context-management, tech-stack-decisions
- Lab docs: FAQ, troubleshooting, getting-unstuck, setup-guide, lab-checklist, ide-config
- Tutorial 2: README, FAQ, setup-guide, performance-profiling
- Requirements: requirements.txt, src/agent/requirements.txt, src/multi_agent/requirements.txt

Validation: Comprehensive grep confirmed no orphaned 3.3 references remain
(except appropriate context mention of '3.3 70B enterprise' in tech-stack.md)

--- a/src/multi_agent/requirements.txt
+++ b/src/multi_agent/requirements.txt
@@ -6,6 +6,7 @@
 # Core dependencies (already installed from Tutorial 1):
 # - Python 3.11+ (2025 requirement)
 # - Ollama 0.4.0+ (local LLM with context caching)
+# - Llama 3.1 (ollama pull llama3.1:8b)
 # - pytest (testing)
 # - requests (HTTP client)
 # - pydantic (data validation)
