--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@
 # - Python 3.11+
 # - Node 20 LTS
 # - Ollama 0.4.0+
+# - Llama 3.1 model (recommended: llama3.1:8b)
 #
 # Installation:
 #   pip install -r requirements.txt
+#   ollama pull llama3.1:8b
 #
 # Or use the setup script:
 #   ./setup.sh
