--- a/src/agent/requirements.txt
+++ b/src/agent/requirements.txt
@@ -1,5 +1,5 @@
 # Tutorial 1: Core Dependencies
-# Requirements: Python 3.11+, Node 20 LTS, Ollama 0.4.0+
+# Requirements: Python 3.11+, Node 20 LTS, Ollama 0.4.0+, Llama 3.1
 
 ollama
 requests
