docs: fix broken README.md links across tutorials
- Fixed relative path issues in Tutorial 1 documentation
  - progress.md: corrected path to root README
  - INDEX.md: fixed 3 links using incorrect depth
  - READING_GUIDE.md: corrected 2 README references

- Fixed relative path issues in Tutorial 2 documentation
  - INDEX.md: corrected 9+ links to lab-2 and root README
  - READING_GUIDE.md: fixed 3 lab-2 references
  - self-assessment.md: corrected lab-2 link
  - lab-2/README.md: fixed Tutorial 1 reference

- Updated .gitignore to exclude validation reports

All README.md links now use correct relative paths and will resolve
properly on GitHub without 404 errors.

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,6 @@ tests/integration/
 .DS_Store
 Thumbs.db
 
+# Analysis and validation reports (temporary files)
+TUTORIAL_ANALYSIS.md
+README_LINK_VALIDATION_REPORT.md
