fix: restore proper scaffolding for student labs
Tutorial 1 Fixes:
- Convert file_search.py to scaffold with NotImplementedError
- Convert read_file.py to scaffold with NotImplementedError
- Remove pre-emptive tool imports from simple_agent.py
- Convert test files to scaffolds with pytest.skip() pattern
- Add instructional TODOs and hints throughout

Tutorial 2 Fixes:
- Update Exercise 2 docs to match WriterAgent scaffold state
- Correct IMPLEMENTATION_NOTES.md test counts and status
- Clarify scaffold vs complete implementations

Solutions Management:
- Create solutions/tutorial-1/ directory
- Preserve all complete implementations as reference
- Add comprehensive README for solutions usage

Infrastructure:
- Update .gitignore for solutions and internal docs

This resolves critical issues where solution code existed in scaffold files,
preventing students from completing exercises as designed. All labs now
have proper scaffolding with clear TODO markers for student implementation.

Fixes identified in comprehensive lab review (8/8 issues resolved).

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,8 @@ Thumbs.db
 # Analysis and validation reports (temporary files)
 TUTORIAL_ANALYSIS.md
 README_LINK_VALIDATION_REPORT.md
+IMPLEMENTATION_NOTES.md
+LAB-REVIEW-SUMMARY.md
+
+# Solutions (reference implementations, not for student repo)
+solutions/
