docs(lesson-3): add Tutorial 3 (Memory & RAG) to cursorrules
- Add Tutorial 3 to active tutorials in project context
- Add src/memory_rag/ and tests/memory_rag/ directory structure
- Add Tutorial 3 documentation paths and development rules
- Add RAG & Memory Specific Guidelines section (Section 11)
- Update mentor/AI integration for hybrid approach
- Add multi-model orchestration guidelines (Llama + DeepSeek)
- Update cross-tutorial references and progression arc
- Add .obsidian/ to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ htmlcov/
 .agent_state/
 *.plan.md
 
+# Obsidian
+.obsidian/
+
 # Project Planning Documents (work in progress)
 TUTORIAL-2-SCOPE.md
 
