docs: add Lesson 1 - Test Results to .gitignore
- Included 'Lesson 1 - Test Results.md' in .gitignore to prevent tracking of test result files.
- This update helps maintain a clean repository by excluding unnecessary files from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ TUTORIAL_ANALYSIS.md
 README_LINK_VALIDATION_REPORT.md
 IMPLEMENTATION_NOTES.md
 LAB-REVIEW-SUMMARY.md
+Lesson 1 - Test Results.md
 
 # Solutions (reference implementations, not for student repo)
 solutions/
